# zephyr_prj_tmpl

./: CMakeLists.txt  prj.conf  readme.md
.cache/clangd/index/: main.c.54B19790FCE691EB.idx  main.cpp.097A04531A912E12.idx
boards/: nucleo_f411re.overlay
boards/st/: Kconfig.my_board  board.yml  my_board.dts
boards/st/my_board/: my_board.dts  my_board_defconfig
src/: main.cpp
src/app/: user-adc.cpp  user-gpio.cpp  user-pwm.cpp  user-spi.cpp
